--- a/itlib/src/main/webapp/css/registrStyle.css
+++ b/itlib/src/main/webapp/css/registrStyle.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(/css/images/mainimg.jpg) no-repeat;
+    background: url("/css/images/mainimg.jpg") no-repeat;
     background-size: cover;
 }
 .logo img{
